Archive2/63/d42b928b1e5019/output
clang c11
main.cpp:2:12: error: expected ']'
    int a[1,2];
           ^
main.cpp:2:10: note: to match this '['
    int a[1,2];
         ^
1 error generated.

gcc c11
main.cpp: In function 'main':
main.cpp:2:12: error: expected ']' before ',' token
     int a[1,2];
            ^
main.cpp:3:11: error: 'a' undeclared (first use in this function)
     (void)a;
           ^
main.cpp:3:11: note: each undeclared identifier is reported only once for each function it appears in

